// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > DROM 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: undefined
dirigeant . rémunération . cotisations: undefined
dirigeant . rémunération . net: undefined
dirigeant . rémunération . net . après impôt: undefined
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined

Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 1613
dirigeant . indépendant . revenu professionnel: 51986
dirigeant . rémunération . cotisations: 23245
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41118
dirigeant . rémunération . totale: 73245
entreprise . charges: 0
entreprise . chiffre d'affaires: 73245
impôt . montant: 8882

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20767
dirigeant . rémunération . cotisations: 8368
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19359
dirigeant . rémunération . totale: 28368
entreprise . charges: 0
entreprise . chiffre d'affaires: 28368
impôt . montant: 641

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20767
dirigeant . rémunération . cotisations: 8387
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19359
dirigeant . rémunération . totale: 28387
entreprise . charges: 0
entreprise . chiffre d'affaires: 28387
impôt . montant: 641

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 51982
dirigeant . rémunération . cotisations: 23100
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40812
dirigeant . rémunération . totale: 73100
entreprise . charges: 0
entreprise . chiffre d'affaires: 73100
impôt . montant: 9188

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 41600
dirigeant . rémunération . cotisations: 19029
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 33598
dirigeant . rémunération . totale: 59029
entreprise . charges: 0
entreprise . chiffre d'affaires: 59029
impôt . montant: 6402

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 3559
dirigeant . indépendant . revenu professionnel: 31191
dirigeant . rémunération . cotisations: 13973
dirigeant . rémunération . net: 30000
dirigeant . rémunération . net . après impôt: 26637
dirigeant . rémunération . totale: 43973
entreprise . charges: 0
entreprise . chiffre d'affaires: 43973
impôt . montant: 3363

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52112
dirigeant . rémunération . cotisations: 27926
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41080
dirigeant . rémunération . totale: 77926
entreprise . charges: 0
entreprise . chiffre d'affaires: 77926
impôt . montant: 8920

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52125
dirigeant . rémunération . cotisations: 28409
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41076
dirigeant . rémunération . totale: 78409
entreprise . charges: 0
entreprise . chiffre d'affaires: 78409
impôt . montant: 8924

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52193
dirigeant . rémunération . cotisations: 30930
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41056
dirigeant . rémunération . totale: 80930
entreprise . charges: 0
entreprise . chiffre d'affaires: 80930
impôt . montant: 8944

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52013
dirigeant . rémunération . cotisations: 24305
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41110
dirigeant . rémunération . totale: 74305
entreprise . charges: 0
entreprise . chiffre d'affaires: 74305
impôt . montant: 8890

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 52013
dirigeant . rémunération . cotisations: 24304
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41110
dirigeant . rémunération . totale: 74304
entreprise . charges: 0
entreprise . chiffre d'affaires: 74304
impôt . montant: 8890

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 517949
dirigeant . rémunération . cotisations: 161191
dirigeant . rémunération . net: 500000
dirigeant . rémunération . net . après impôt: 281561
dirigeant . rémunération . totale: 661191
entreprise . charges: 0
entreprise . chiffre d'affaires: 661191
impôt . montant: 218439"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 18085
dirigeant . rémunération . cotisations: 12726
dirigeant . rémunération . net: 17274
dirigeant . rémunération . net . après impôt: 17062
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 212

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17916
dirigeant . rémunération . cotisations: 13926
dirigeant . rémunération . net: 16074
dirigeant . rémunération . net . après impôt: 15889
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 185

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20885
dirigeant . rémunération . cotisations: 9926
dirigeant . rémunération . net: 20074
dirigeant . rémunération . net . après impôt: 19415
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 659

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 14194
dirigeant . rémunération . cotisations: 6346
dirigeant . rémunération . net: 13654
dirigeant . rémunération . net . après impôt: 13654
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 225659
dirigeant . rémunération . cotisations: 82483
dirigeant . rémunération . net: 217517
dirigeant . rémunération . net . après impôt: 138826
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 78691"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 222159
dirigeant . rémunération . cotisations: 85983
dirigeant . rémunération . net: 214017
dirigeant . rémunération . net . après impôt: 136901
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 77116"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 3411
dirigeant . indépendant . revenu professionnel: 35548
dirigeant . rémunération . cotisations: 15806
dirigeant . rémunération . net: 34194
dirigeant . rémunération . net . après impôt: 30243
dirigeant . rémunération . totale: 50000
entreprise . charges: 0
entreprise . chiffre d'affaires: 50000
impôt . montant: 3951

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 137
dirigeant . rémunération . cotisations: 1364
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 1464
entreprise . charges: 0
entreprise . chiffre d'affaires: 1464
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 104
dirigeant . rémunération . cotisations: 158
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 258
entreprise . charges: 0
entreprise . chiffre d'affaires: 258
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 830
dirigeant . rémunération . cotisations: 439
dirigeant . rémunération . net: 800
dirigeant . rémunération . net . après impôt: 800
dirigeant . rémunération . totale: 1239
entreprise . charges: 0
entreprise . chiffre d'affaires: 1239
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 41485
dirigeant . rémunération . cotisations: 4734
dirigeant . rémunération . net: 40266
dirigeant . rémunération . net . après impôt: 34534
dirigeant . rémunération . totale: 45000
entreprise . charges: 0
entreprise . chiffre d'affaires: 45000
impôt . montant: 5732

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 7001
dirigeant . rémunération . cotisations: 2240
dirigeant . rémunération . net: 6760
dirigeant . rémunération . net . après impôt: 6760
dirigeant . rémunération . totale: 9000
entreprise . charges: 0
entreprise . chiffre d'affaires: 9000
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 987
dirigeant . indépendant . revenu professionnel: 9253
dirigeant . rémunération . cotisations: 1015
dirigeant . rémunération . net: 8985
dirigeant . rémunération . net . après impôt: 8985
dirigeant . rémunération . totale: 10000
entreprise . charges: 0
entreprise . chiffre d'affaires: 10000
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13356
dirigeant . rémunération . cotisations: 2048
dirigeant . rémunération . net: 12952
dirigeant . rémunération . net . après impôt: 12952
dirigeant . rémunération . totale: 15000
entreprise . charges: 0
entreprise . chiffre d'affaires: 15000
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 39372
dirigeant . rémunération . cotisations: 17118
dirigeant . rémunération . net: 37882
dirigeant . rémunération . net . après impôt: 32784
dirigeant . rémunération . totale: 55000
entreprise . charges: 0
entreprise . chiffre d'affaires: 55000
impôt . montant: 5098

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 71717
dirigeant . rémunération . cotisations: 30995
dirigeant . rémunération . net: 69005
dirigeant . rémunération . net . après impôt: 56355
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 12650

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 71717
dirigeant . rémunération . cotisations: 30995
dirigeant . rémunération . net: 69005
dirigeant . rémunération . net . après impôt: 56355
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 12650

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 20767
dirigeant . rémunération . cotisations: 8368
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 17923
dirigeant . rémunération . totale: 28368
entreprise . charges: 0
entreprise . chiffre d'affaires: 28368
impôt . montant: 2077

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 607
dirigeant . rémunération . cotisations: 1444
dirigeant . rémunération . net: 556
dirigeant . rémunération . net . après impôt: 556
dirigeant . rémunération . totale: 2000
entreprise . charges: 0
entreprise . chiffre d'affaires: 2000
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42422
dirigeant . rémunération . cotisations: 19204
dirigeant . rémunération . net: 40796
dirigeant . rémunération . net . après impôt: 36056
dirigeant . rémunération . totale: 60000
entreprise . charges: 0
entreprise . chiffre d'affaires: 60001
impôt . montant: 4740

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4195
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14195
entreprise . charges: 0
entreprise . chiffre d'affaires: 14195
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4195
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14195
entreprise . charges: 1000
entreprise . chiffre d'affaires: 15195
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 42342
dirigeant . rémunération . cotisations: 19163
dirigeant . rémunération . net: 40719
dirigeant . rémunération . net . après impôt: 3000
dirigeant . rémunération . totale: 59882
entreprise . charges: 0
entreprise . chiffre d'affaires: 59880
impôt . montant: 4719

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13952
dirigeant . rémunération . cotisations: 5561
dirigeant . rémunération . net: 13439
dirigeant . rémunération . net . après impôt: 13439
dirigeant . rémunération . totale: 19000
entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > inversions 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13208
dirigeant . rémunération . cotisations: 5278
dirigeant . rémunération . net: 12722
dirigeant . rémunération . net . après impôt: 12722
dirigeant . rémunération . totale: 18000
entreprise . charges: 2000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 549
dirigeant . rémunération . cotisations: 1434
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
dirigeant . rémunération . totale: 1934
entreprise . charges: 0
entreprise . chiffre d'affaires: 1934
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1065
dirigeant . rémunération . cotisations: 1524
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
dirigeant . rémunération . totale: 2524
entreprise . charges: 0
entreprise . chiffre d'affaires: 2524
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1581
dirigeant . rémunération . cotisations: 1614
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
dirigeant . rémunération . totale: 3114
entreprise . charges: 0
entreprise . chiffre d'affaires: 3114
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 2097
dirigeant . rémunération . cotisations: 1703
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
dirigeant . rémunération . totale: 3703
entreprise . charges: 0
entreprise . chiffre d'affaires: 3703
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5193
dirigeant . rémunération . cotisations: 2242
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
dirigeant . rémunération . totale: 7242
entreprise . charges: 0
entreprise . chiffre d'affaires: 7242
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 10382
dirigeant . rémunération . cotisations: 4195
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 14195
entreprise . charges: 0
entreprise . chiffre d'affaires: 14195
impôt . montant: 0

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 103819
dirigeant . rémunération . cotisations: 40765
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73206
dirigeant . rémunération . totale: 140765
entreprise . charges: 0
entreprise . chiffre d'affaires: 140765
impôt . montant: 26794"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1033761
dirigeant . rémunération . cotisations: 243458
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 528813
dirigeant . rémunération . totale: 1243458
entreprise . charges: 0
entreprise . chiffre d'affaires: 1243458
impôt . montant: 471187"
`;
